update env configs for abey chain

--- a/container_env_files/txs.env
+++ b/container_env_files/txs.env
@@ -12,3 +12,9 @@ CSRF_TRUSTED_ORIGINS="http://localhost:8000"
 EVENTS_QUEUE_URL=amqp://general-rabbitmq:5672
 EVENTS_QUEUE_ASYNC_CONNECTION=True
 EVENTS_QUEUE_EXCHANGE_NAME="safe-transaction-service-events"
+
+ETHEREUM_NODE_URL=https://rpc.abeychain.com
+ETHEREUM_TRACING_NODE_URL=https://rpc.abeychain.com
+ETH_EVENTS_BLOCK_PROCESS_LIMIT=9
+ETH_EVENTS_BLOCK_PROCESS_LIMIT_MAX=10
+ETH_EVENTS_BLOCKS_TO_REINDEX_AGAIN=10
