--- a/container_env_files/ui.env
+++ b/container_env_files/ui.env
@@ -18,7 +18,7 @@ NEXT_PUBLIC_IS_PRODUCTION=true
 # Or overwrite the fallback values (set a different WalletConnect bridge)
 
 # Latest supported safe version, used for upgrade prompts
-NEXT_PUBLIC_SAFE_VERSION=1.4.1
+NEXT_PUBLIC_SAFE_VERSION=1.3.0
 
 # Access keys
 NEXT_PUBLIC_SENTRY_DSN=
@@ -29,3 +29,5 @@ NEXT_PUBLIC_WC_BRIDGE=
 NEXT_PUBLIC_FORTMATIC_KEY=
 NEXT_PUBLIC_PORTIS_KEY=
 NEXT_PUBLIC_CYPRESS_MNEMONIC=
+
+NEXT_PUBLIC_DEFAULT_MAINNET_CHAIN_ID=179
