--- a/.env.sample
+++ b/.env.sample
@@ -6,4 +6,4 @@ TXS_VERSION=latest
 UI_VERSION=latest
 EVENTS_VERSION=latest
 
-RPC_NODE_URL=http://url.to.node
+RPC_NODE_URL=https://rpc.abeychain.com
