add heap limit for  ui

--- a/container_env_files/ui.env
+++ b/container_env_files/ui.env
@@ -31,3 +31,5 @@ NEXT_PUBLIC_PORTIS_KEY=
 NEXT_PUBLIC_CYPRESS_MNEMONIC=
 
 NEXT_PUBLIC_DEFAULT_MAINNET_CHAIN_ID=179
+
+NODE_OPTIONS=--max-old-space-size=4096
