udpate MEDIA_URL for cfg.env

--- a/container_env_files/cfg.env
+++ b/container_env_files/cfg.env
@@ -41,4 +41,4 @@ CGW_AUTH_TOKEN=your_privileged_endpoints_token
 
 CSRF_TRUSTED_ORIGINS="http://localhost:8000,http://18.140.90.74:8000"
 
-MEDIA_URL = "http://localhost:8000/cfg/media/"
+MEDIA_URL="http://18.140.90.74:8000/cfg/media/"
