migrate pr: https://github.com/safe-global/safe-infrastructure/pull/175

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -112,6 +112,12 @@ http {
             expires 365d;
         }
 
+        location /cfg/media {
+            alias /cfg-media;
+            expires 365d;
+        }
+
+
         location /cfg/ {
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-Host $server_name;
@@ -143,7 +149,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             add_header              Front-End-Https   on;
         }
-      
+
       ## Events service mounting point
       location /events/ {
             proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
@@ -158,7 +164,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             add_header              Front-End-Https   on;
         }
-      
+
       location / {
             proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
             proxy_set_header    X-Forwarded-Proto   $scheme;
