remove tracing node

--- a/container_env_files/txs.env
+++ b/container_env_files/txs.env
@@ -14,7 +14,7 @@ EVENTS_QUEUE_ASYNC_CONNECTION=True
 EVENTS_QUEUE_EXCHANGE_NAME="safe-transaction-service-events"
 
 ETHEREUM_NODE_URL=https://rpc.abeychain.com
-ETHEREUM_TRACING_NODE_URL=https://rpc.abeychain.com
+ETHEREUM_TRACING_NODE_URL=
 ETH_INTERNAL_NO_FILTER=1
 ETH_EVENTS_BLOCK_PROCESS_LIMIT=9
 ETH_EVENTS_BLOCK_PROCESS_LIMIT_MAX=10
