add logo & brand name in ui.env

--- a/container_env_files/ui.env
+++ b/container_env_files/ui.env
@@ -33,3 +33,6 @@ NEXT_PUBLIC_CYPRESS_MNEMONIC=
 NEXT_PUBLIC_DEFAULT_MAINNET_CHAIN_ID=179
 
 NODE_OPTIONS=--max-old-space-size=4096
+
+NEXT_PUBLIC_BRAND_NAME=ABEY SAFE WALLET
+NEXT_PUBLIC_BRAND_LOGO=https://p.ipic.vip/6qk0hh.png
