--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -117,6 +117,11 @@ http {
             expires 365d;
         }
 
+        location /media {
+            alias /txs-media;
+            expires 365d;
+        }
+
 
         location /cfg/ {
             proxy_set_header Host $host;
